Fixing transparncy slider wrapping on advanced controls + firefox

--- a/boldgrid-theme-framework/assets/scss/customizer/controls/_generic.scss
+++ b/boldgrid-theme-framework/assets/scss/customizer/controls/_generic.scss
@@ -23,11 +23,15 @@
 	}
 
 	.pluto-color-control + .iris-picker {
-		min-width: 280px;
+		min-width: 253px;
 	}
 
 	&.bg-control-switch .mdc-switch {
 		top: 5px;
+	}
+
+	.iris-slider.iris-slider {
+		margin-left: 10px !important;
 	}
 
 	&.directional-control {
